--- a/index.html
+++ b/index.html
@@ -221,21 +221,41 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="bg-[var(--topmenu)] py-6">
-    <div class="container mx-auto text-center text-white">
-      <p class="mb-2">BetPuan © 2025 | Tüm Hakları Saklıdır</p>
-      <div class="space-x-6">
-        <a href="https://2bpuan.app" class="text-yellow-500" rel="nofollow" target="_blank">Android Uygulaması</a>
-        <a href="https://2bpuan.app" class="text-yellow-500" rel="nofollow" target="_blank">iOS Uygulaması</a>
-      </div>
-    </div>
-  </footer>
+<!-- Footer -->
+<footer class="bg-[var(--topmenu)] py-6">
+  <div class="container mx-auto text-center text-white space-y-4">
+    
+    <p class="text-sm md:text-base">
+      2025 © <strong>BetPuanUyellik.com</strong> – Türkiye’nin <span class="font-bold">güvenilir bahis siteleri</span> arasında lider! <br />
+      <span class="font-semibold">Mobil bahis giriş</span> ve <span class="font-semibold">yüksek oranlı bahis</span> ile kazanın.
+    </p>
 
-  <!-- Floating Call to Action -->
-  <a href="https://sshortly5.com/9ca3b2b" class="floating-cta" rel="nofollow">
-    🚀
-  </a>
+    <div class="flex justify-center gap-6 flex-wrap items-center">
+      <a href="https://2bpuan.app" class="flex items-center gap-2 bg-black/30 px-4 py-2 rounded-lg hover:bg-black/40 transition" rel="nofollow" target="_blank">
+        📱 Android Uygulaması
+      </a>
+      <a href="https://2bpuan.app" class="flex items-center gap-2 bg-black/30 px-4 py-2 rounded-lg hover:bg-black/40 transition" rel="nofollow" target="_blank">
+        🍎 iOS Uygulaması
+      </a>
+    </div>
+
+    <!-- Internal BetPuan Links -->
+    <div class="flex justify-center gap-4 flex-wrap text-xs md:text-sm">
+      <a href="https://betpuan.co" rel="follow" class="hover:underline">BetPuan</a>
+      <a href="https://betpuanguncelgiris.com" rel="follow" class="hover:underline">BetPuan Güncel Giriş</a>
+      <a href="https://betpuanmobil.com" rel="follow" class="hover:underline">BetPuan Mobil</a>
+      <a href="https://betpuanuyelik.com" rel="follow" class="hover:underline">BetPuan Üyelik</a>
+      <a href="https://bonusbetpuan.com" rel="follow" class="hover:underline">Bonus BetPuan</a>
+      <a href="https://girisbetpuan.com" rel="follow" class="hover:underline">Giriş BetPuan</a>
+      <a href="https://puanbetgiris.com" rel="follow" class="hover:underline">PuanBet Giriş</a>
+    </div>
+
+  </div>
+</footer>
+
+<!-- Floating Call to Action -->
+<a href="https://sshortly5.com/9ca3b2b" class="floating-cta fixed bottom-4 right-4 z-50 bg-yellow-400 text-black font-semibold py-3 px-4 rounded-full shadow-xl border-2 border-yellow-500 animate-pulse
+
 
 </body>
 </html>
