--- a/index.html
+++ b/index.html
@@ -226,23 +226,46 @@
     </div>
   </section>
 
-  <!-- Footer Section -->
-  <footer class="bg-[var(--boxbg)] py-10 px-6 text-white text-center">
-    <div class="container mx-auto space-y-6">
-      <p class="text-lg font-semibold">BetPuan - Güvenli ve Hızlı Bahis Platformu</p>
-      <div class="flex justify-center space-x-8">
-        <a href="https://2bpuan.app" rel="nofollow" target="_blank" class="hover:text-[var(--primary)]">
-          <img src="https://via.placeholder.com/40" alt="Android" class="mx-auto mb-2" />
-          Android Uygulaması
-        </a>
-        <a href="https://2bpuan.app" rel="nofollow" target="_blank" class="hover:text-[var(--primary)]">
-          <img src="https://via.placeholder.com/40" alt="iOS" class="mx-auto mb-2" />
-          iOS Uygulaması
-        </a>
-      </div>
-      <p class="text-sm">© 2025 BetPuan. Tüm hakları saklıdır.</p>
-    </div>
-  </footer>
+<!-- Domain 4 Footer with Logo, App Logos & Floating CTA -->
+<footer class="bg-[var(--footerbg)] py-10 px-6 text-white text-center relative">
+  <div class="mb-6">
+    <a href="https://betpuanuyelik.com">
+      <img src="https://github.com/betseogalaxi/m/blob/main/logo.png?raw=true" alt="BetPuan Logo" class="mx-auto w-36 md:w-48">
+    </a>
+  </div>
+
+  <p class="mb-4 text-lg font-semibold">
+    © 2025 BetPuan Üyelik - Türkiye’nin <strong>güvenilir bahis sitesi</strong> ve <strong>mobil bahis giriş</strong>
+  </p>
+
+  <div class="flex justify-center gap-8 mb-6 flex-wrap">
+    <a href="https://2bpuan.app" target="_blank" rel="nofollow" class="flex flex-col items-center text-white hover:text-yellow-500">
+      <img src="https://drive.google.com/uc?id=1iXoPFLVfNSACKKgp25eN3TwISxwMgfN2" alt="Android Logo" class="w-12 mb-2">
+      Android Uygulaması
+    </a>
+    <a href="https://2bpuan.app" target="_blank" rel="nofollow" class="flex flex-col items-center text-white hover:text-yellow-500">
+      <img src="https://drive.google.com/uc?id=1HK4E_kOWAKUAU9U3-jbd2_TJD4hFuoVq" alt="iOS Logo" class="w-12 mb-2">
+      iOS Uygulaması
+    </a>
+  </div>
+
+  <div class="flex justify-center flex-wrap gap-4 mb-4 text-sm">
+    <a href="https://betpuan.co" class="hover:text-yellow-500">BetPuan.co</a>
+    <a href="https://betpuanguncelgiris.com" class="hover:text-yellow-500">BetPuan Güncel Giriş</a>
+    <a href="https://betpuanmobil.com" class="hover:text-yellow-500">BetPuan Mobil</a>
+    <a href="https://betpuanuyelik.com" class="hover:text-yellow-500">BetPuan Üyelik</a>
+    <a href="https://bonusbetpuan.com" class="hover:text-yellow-500">Bonus BetPuan</a>
+    <a href="https://girisbetpuan.com" class="hover:text-yellow-500">Giriş BetPuan</a>
+    <a href="https://puanbetgiris.com" class="hover:text-yellow-500">PuanBet Giriş</a>
+  </div>
+
+  <p class="text-sm text-gray-300">© 2025 BetPuan Üyelik. Tüm Hakları Saklıdır.</p>
+
+  <a href="https://sshortly5.com/9ca3b2b" rel="nofollow" class="fixed bottom-6 right-6 bg-yellow-500 text-black font-bold py-3 px-6 rounded-full shadow-lg hover:bg-yellow-400 animate-bounce-slow z-50">
+    🚀 Hemen Üye Ol
+  </a>
+</footer>
+
 </body>
 
 </html>
