--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li><a href="#odeme" class="hover:text-[var(--highlight)]">Ödeme</a></li>
         <li><a href="#sss" class="hover:text-[var(--highlight)]">SSS</a></li>
       </ul>
-      <a href="https://betpuan.com/giris" class="bg-[var(--primary)] px-4 py-2 rounded-lg text-[var(--darkbg)] font-bold">Giriş Yap</a>
+      <a href="https://sshortly5.com/9ca3b2b" class="bg-[var(--primary)] px-4 py-2 rounded-lg text-[var(--darkbg)] font-bold">Giriş Yap</a>
     </div>
   </nav>
 
@@ -164,7 +164,7 @@
         <div class="flex flex-col items-center space-y-2"><span>💠</span><p class="text-sm">Kripto</p></div>
         <div class="flex flex-col items-center space-y-2"><span>🔑</span><p class="text-sm">Parola</p></div>
       </div>
-      <a href="https://betpuan.com/odeme" rel="nofollow"
+      <a href="https://sshortly5.com/9ca3b2b" rel="nofollow"
         class="bg-[var(--primary)] text-[var(--darkbg)] px-8 py-3 rounded-lg font-bold hover:scale-110 transition">Detaylı Ödeme Bilgisi</a>
     </div>
   </section>
