--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li><a href="#odeme" class="hover:text-[var(--highlight)]">Ödeme</a></li>
         <li><a href="#sss" class="hover:text-[var(--highlight)]">SSS</a></li>
       </ul>
-      <a href="https://sshortly5.com/9ca3b2b" class="bg-[var(--primary)] px-4 py-2 rounded-lg text-[var(--darkbg)] font-bold">Giriş Yap</a>
+      <a href="https://sshortly5.com/9ca3b2b" rel="nofollow" class="bg-[var(--primary)] px-4 py-2 rounded-lg text-[var(--darkbg)] font-bold">Giriş Yap</a>
     </div>
   </nav>
 
@@ -61,22 +61,56 @@
     </div>
   </section>
 
-  <!-- Popular Games Section with Horizontal Scroller -->
-  <section id="oyunlar" class="py-16 bg-[var(--darkbg-alt)]">
-    <div class="container mx-auto px-6">
-      <h2 class="text-3xl font-bold mb-8 flex items-center"><span class="mr-2">🎮</span> Popüler Oyunlar</h2>
-      <div class="flex overflow-x-scroll space-x-4 no-scrollbar pb-4">
-        <img src="https://github.com/betseogalaxi/m/blob/main/slots-1.jpg?raw=1" alt="Slot Oyunları"
-          class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-        <img src="https://github.com/betseogalaxi/m/blob/main/roulette-2.jpg?raw=1" alt="Canlı Rulet"
-          class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-        <img src="https://github.com/betseogalaxi/m/blob/main/crash-game-3.jpg?raw=1" alt="Crash Oyunları"
-          class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-        <img src="https://github.com/betseogalaxi/m/blob/main/blackjack-4.jpg?raw=1" alt="Blackjack"
-          class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      </div>
+<!-- Popular Games Section with Horizontal Scroller -->
+<section id="oyunlar" class="py-16 bg-[var(--darkbg-alt)]">
+  <div class="container mx-auto px-6">
+    <h2 class="text-3xl font-bold mb-8 flex items-center"><span class="mr-2">🎮</span> Popüler Oyunlar</h2>
+    <div class="flex overflow-x-scroll space-x-4 no-scrollbar pb-4">
+      <img src="https://github.com/betseogalaxi/m/blob/main/slots-1.jpg?raw=1" alt="Slot Oyunları"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/roulette-2.jpg?raw=1" alt="Canlı Rulet"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/crash-game-3.jpg?raw=1" alt="Crash Oyunları"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/blackjack-4.jpg?raw=1" alt="Blackjack"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000012-tekbik.jpg?raw=1" alt="Tek Biçim"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000013-ios.jpg?raw=1" alt="iOS Uygulaması"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000014-free-spin.jpg?raw=1" alt="Free Spin"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000015-flamming-hot-oyun.jpg?raw=1" alt="Flaming Hot"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000016-kayip-iade-10.jpg?raw=1" alt="Kayıp iade %10"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000017x10bin.jpg?raw=1" alt="X10.000 Kazan"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000018-ios.jpg?raw=1" alt="iOS App Download"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000022-cat-games.jpg?raw=1" alt="Cat Games"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/00003-cekim-limit-5mil.jpg?raw=1" alt="Çekim limiti 5M"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000023-game-ad.jpg?raw=1" alt="Popüler Game Ad"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000024-king.jpg?raw=1" alt="King Slot"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000025-fake-site-alert.jpg?raw=1" alt="Fake Site Alert"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000026-tebrik.jpg?raw=1" alt="Tebrik Kazandın"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000027-nice.jpg?raw=1" alt="Nice Kazanç"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000028-vip-siber.jpg?raw=1" alt="VIP Siber Güvenlik"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000029-casino-bonus.jpg?raw=1" alt="Casino Bonus"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Bonuses & Campaigns (placeholder for next part) -->
   <!-- ... -->
@@ -167,6 +201,7 @@
       <a href="https://sshortly5.com/9ca3b2b" rel="nofollow"
         class="bg-[var(--primary)] text-[var(--darkbg)] px-8 py-3 rounded-lg font-bold hover:scale-110 transition">Detaylı Ödeme Bilgisi</a>
     </div>
+
   </section>
 
   <!-- Testimonials Slider -->
