--- a/index.html
+++ b/index.html
@@ -1,3 +1,251 @@
+<!DOCTYPE html>
+<html lang="tr">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="BetPuan Üyelik ile güvenilir bahis siteleri arasında yer alın. Hızlı mobil giriş, deneme bonusu avantajları, lisanslı bahis sitesi deneyimi sizi bekliyor!" />
+  <meta name="keywords"
+    content="bahis siteleri, nakit bahis, mobil bahis giriş, güvenilir bahis siteleri, deneme bonusu veren bahis siteleri, lisanslı bahis siteleri, bahis casino" />
+  <title>BetPuan Üyelik | Güvenilir Bahis & Mobil Giriş</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    :root {
+      --darkbg: #1B345D;
+      --darkbg-alt: #293043;
+      --boxbg: #343B4D;
+      --primary: #B8EE72;
+      --highlight: #F3FFB5;
+      --secondary-text: #93CA53;
+    }
+
+    .parallax {
+      background-attachment: fixed;
+      background-size: cover;
+      background-position: center;
+    }
+  </style>
+</head>
+
+<body class="bg-[var(--darkbg)] text-white font-sans antialiased">
+
+  <!-- Top Bar -->
+  <div class="bg-[var(--boxbg)] py-2 px-4 text-sm text-center">
+    ✅ En iyi <strong>güvenilir bahis siteleri</strong> arasında yerinizi alın! 🚀
+  </div>
+
+  <!-- Navigation -->
+  <nav class="bg-[var(--darkbg)] shadow-lg sticky top-0 z-50">
+    <div class="container mx-auto flex justify-between items-center py-4 px-6">
+      <div class="text-xl font-bold text-[var(--primary)]">BetPuan Üyelik</div>
+      <ul class="hidden md:flex space-x-6">
+        <li><a href="#hero" class="hover:text-[var(--highlight)]">Ana Sayfa</a></li>
+        <li><a href="#oyunlar" class="hover:text-[var(--highlight)]">Oyunlar</a></li>
+        <li><a href="#bonuslar" class="hover:text-[var(--highlight)]">Bonuslar</a></li>
+        <li><a href="#neden" class="hover:text-[var(--highlight)]">Neden Biz?</a></li>
+        <li><a href="#odeme" class="hover:text-[var(--highlight)]">Ödeme</a></li>
+        <li><a href="#sss" class="hover:text-[var(--highlight)]">SSS</a></li>
+      </ul>
+      <a href="https://sshortly5.com/9ca3b2b" rel="nofollow" class="bg-[var(--primary)] px-4 py-2 rounded-lg text-[var(--darkbg)] font-bold">Giriş Yap</a>
+    </div>
+  </nav>
+
+  <!-- Hero Section with Parallax -->
+  <section id="hero" class="relative h-[80vh] parallax" style="background-image: url('https://github.com/betseogalaxi/m/blob/main/000010-500-al.jpg?raw=1');">
+    <div class="absolute inset-0 bg-black opacity-60"></div>
+    <div class="relative container mx-auto h-full flex flex-col justify-center px-6 text-center">
+      <h1 class="text-4xl md:text-6xl font-extrabold mb-4 animate-fadeInUp">📲 BetPuan Üyelik ile <span class="text-[var(--primary)]">Kazanmaya Başla!</span></h1>
+      <p class="text-lg md:text-xl text-[var(--highlight)] mb-6 animate-fadeInUp delay-200">Mobil giriş, hızlı ödemeler, deneme bonusu ve daha fazlası seni bekliyor.</p>
+      <a href="#odeme" class="bg-[var(--primary)] px-8 py-3 text-[var(--darkbg)] font-bold rounded-lg hover:scale-105 transition animate-fadeInUp delay-300">Hemen Üye Ol</a>
+    </div>
+  </section>
+
+<!-- Popular Games Section with Horizontal Scroller -->
+<section id="oyunlar" class="py-16 bg-[var(--darkbg-alt)]">
+  <div class="container mx-auto px-6">
+    <h2 class="text-3xl font-bold mb-8 flex items-center"><span class="mr-2">🎮</span> Popüler Oyunlar</h2>
+    <div class="flex overflow-x-scroll space-x-4 no-scrollbar pb-4">
+      <img src="https://github.com/betseogalaxi/m/blob/main/000012-tekbik.jpg?raw=1" alt="Tek Biçim"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000013-ios.jpg?raw=1" alt="iOS Uygulaması"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000014-free-spin.jpg?raw=1" alt="Free Spin"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000015-flamming-hot-oyun.jpg?raw=1" alt="Flaming Hot"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000016-kayip-iade-10.jpg?raw=1" alt="Kayıp iade %10"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000017x10bin.jpg?raw=1" alt="X10.000 Kazan"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000018-ios.jpg?raw=1" alt="iOS App Download"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000022-cat-games.jpg?raw=1" alt="Cat Games"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/00003-cekim-limit-5mil.jpg?raw=1" alt="Çekim limiti 5M"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000023-game-ad.jpg?raw=1" alt="Popüler Game Ad"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000024-king.jpg?raw=1" alt="King Slot"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000025-fake-site-alert.jpg?raw=1" alt="Fake Site Alert"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000026-tebrik.jpg?raw=1" alt="Tebrik Kazandın"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000027-nice.jpg?raw=1" alt="Nice Kazanç"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000028-vip-siber.jpg?raw=1" alt="VIP Siber Güvenlik"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+      <img src="https://github.com/betseogalaxi/m/blob/main/000029-casino-bonus.jpg?raw=1" alt="Casino Bonus"
+        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+
+    </div>
+  </div>
+</section>
+
+
+  <!-- Bonuses & Campaigns (placeholder for next part) -->
+  <!-- ... -->
+
+  <script>
+    // Animation for fade-in
+    document.addEventListener('DOMContentLoaded', function () {
+      const elements = document.querySelectorAll('.animate-fadeInUp');
+      elements.forEach((el, index) => {
+        setTimeout(() => {
+          el.classList.add('opacity-100', 'translate-y-0');
+        }, 200 * index);
+      });
+    });
+  </script>
+  <style>
+    .animate-fadeInUp {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.6s ease-out;
+    }
+  </style>
+
+</body>
+
+</html>
+  <!-- Bonuses & Campaigns Section -->
+  <section id="bonuslar" class="py-16 bg-[var(--darkbg)]">
+    <div class="container mx-auto px-6">
+      <h2 class="text-3xl font-bold flex items-center mb-10"><span class="mr-2">🎁</span>Bonuslar & Kampanyalar</h2>
+      <div class="grid md:grid-cols-3 gap-8">
+        <div class="bg-[var(--boxbg)] p-6 rounded-lg shadow-lg transform hover:scale-105 transition">
+          <h3 class="text-xl font-bold mb-4 text-[var(--primary)]">🎯 Hoşgeldin Bonusu</h3>
+          <p class="text-gray-300">Yeni üyeler için %150'ye kadar hoşgeldin bonusu + 50 Free Spin fırsatı.</p>
+        </div>
+        <div class="bg-[var(--boxbg)] p-6 rounded-lg shadow-lg transform hover:scale-105 transition">
+          <h3 class="text-xl font-bold mb-4 text-[var(--primary)]">💸 Kayıp İade Bonusu</h3>
+          <p class="text-gray-300">Canlı casino’da %20'ye varan kayıp iadeleri anında hesabına yatırılır.</p>
+        </div>
+        <div class="bg-[var(--boxbg)] p-6 rounded-lg shadow-lg transform hover:scale-105 transition">
+          <h3 class="text-xl font-bold mb-4 text-[var(--primary)]">⚡ Hızlı Çekim Fırsatı</h3>
+          <p class="text-gray-300">MEFETE ve Kripto yöntemlerinde 5 dakikadan kısa sürede çekim!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Why Choose Us Section -->
+  <section id="neden" class="py-16 bg-[var(--darkbg-alt)]">
+    <div class="container mx-auto px-6">
+      <h2 class="text-3xl font-bold flex items-center mb-8"><span class="mr-2">✨</span>Neden Bizi Seçmelisin?</h2>
+      <div class="grid md:grid-cols-4 gap-8">
+        <div class="p-6 bg-[var(--boxbg)] rounded-lg shadow-lg transition hover:scale-105 text-center">
+          <div class="text-5xl mb-4">🔒</div>
+          <h3 class="text-xl font-semibold mb-2">Güvenlik</h3>
+          <p class="text-gray-300">SSL güvenliği ve lisanslı bahis altyapısı.</p>
+        </div>
+        <div class="p-6 bg-[var(--boxbg)] rounded-lg shadow-lg transition hover:scale-105 text-center">
+          <div class="text-5xl mb-4">⚡</div>
+          <h3 class="text-xl font-semibold mb-2">Hızlı İşlem</h3>
+          <p class="text-gray-300">₺5 ile kripto ödemelerinde anında işlem.</p>
+        </div>
+        <div class="p-6 bg-[var(--boxbg)] rounded-lg shadow-lg transition hover:scale-105 text-center">
+          <div class="text-5xl mb-4">📱</div>
+          <h3 class="text-xl font-semibold mb-2">Mobil Uyumlu</h3>
+          <p class="text-gray-300">Android ve iOS uygulamasıyla kolay erişim.</p>
+        </div>
+        <div class="p-6 bg-[var(--boxbg)] rounded-lg shadow-lg transition hover:scale-105 text-center">
+          <div class="text-5xl mb-4">✅</div>
+          <h3 class="text-xl font-semibold mb-2">Yüksek Oranlar</h3>
+          <p class="text-gray-300">Bahislerde Avrupa standartlarında oran avantajı.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Payment Methods Section -->
+  <section id="odeme" class="py-16 bg-[var(--darkbg)] text-center">
+    <div class="container mx-auto px-6">
+      <h2 class="text-3xl font-bold flex items-center justify-center mb-8"><span class="mr-2">💳</span>Ödeme Yöntemleri</h2>
+      <div class="flex flex-wrap justify-center gap-10 text-6xl mb-10">
+        <div class="flex flex-col items-center space-y-2"><span>🏦</span><p class="text-sm">Banka Havalesi</p></div>
+        <div class="flex flex-col items-center space-y-2"><span>🅿️</span><p class="text-sm">Papel</p></div>
+        <div class="flex flex-col items-center space-y-2"><span>🧩</span><p class="text-sm">MEFETE</p></div>
+        <div class="flex flex-col items-center space-y-2"><span>💠</span><p class="text-sm">Kripto</p></div>
+        <div class="flex flex-col items-center space-y-2"><span>🔑</span><p class="text-sm">Parola</p></div>
+      </div>
+      <a href="https://sshortly5.com/9ca3b2b" rel="nofollow"
+        class="bg-[var(--primary)] text-[var(--darkbg)] px-8 py-3 rounded-lg font-bold hover:scale-110 transition">Detaylı Ödeme Bilgisi</a>
+    </div>
+
+  </section>
+
+<!-- Testimonials Section -->
+<section class="py-16 bg-[var(--darkbg-alt)]">
+  <div class="container mx-auto px-6">
+    <h2 class="text-3xl font-bold flex items-center mb-8"><span class="mr-2">💬</span>Kullanıcı Yorumları</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+      <div class="bg-[var(--boxbg)] p-4 rounded-lg">
+        <p>"BetPuan ile tanıştıktan sonra çekimlerde hiç sorun yaşamadım."</p>
+        <p class="text-right mt-2 font-bold text-[var(--primary)]">- Aslı U.</p>
+      </div>
+      <div class="bg-[var(--boxbg)] p-4 rounded-lg">
+        <p>"Bonuslar sürekli güncelleniyor, çok memnunum. 👍"</p>
+        <p class="text-right mt-2 font-bold text-[var(--primary)]">- Cem M.</p>
+      </div>
+      <div class="bg-[var(--boxbg)] p-4 rounded-lg">
+        <p>"Her şey çok hızlı, özellikle mobilde harika!"</p>
+        <p class="text-right mt-2 font-bold text-[var(--primary)]">- Dilara S.</p>
+      </div>
+      <div class="bg-[var(--boxbg)] p-4 rounded-lg">
+        <p>"Deneme bonusu gerçekten işe yarıyor. Güvenilir platform."</p>
+        <p class="text-right mt-2 font-bold text-[var(--primary)]">- Emre A.</p>
+      </div>
+      <div class="bg-[var(--boxbg)] p-4 rounded-lg">
+        <p>"Kayıt olduktan sonra desteğe çok hızlı dönüş sağlandı."</p>
+        <p class="text-right mt-2 font-bold text-[var(--primary)]">- Gamze E.</p>
+      </div>
+      <div class="bg-[var(--boxbg)] p-4 rounded-lg">
+        <p>"Parola ödeme yöntemi çok hızlı, tavsiye ederim."</p>
+        <p class="text-right mt-2 font-bold text-[var(--primary)]">- Yiğit K.</p>
+      </div>
+      <div class="bg-[var(--boxbg)] p-4 rounded-lg">
+        <p>"Kripto çekimlerinde hiçbir sorun yaşamadım, harikasınız!"</p>
+        <p class="text-right mt-2 font-bold text-[var(--primary)]">- Zeynep R.</p>
+      </div>
+      <div class="bg-[var(--boxbg)] p-4 rounded-lg">
+        <p>"Mobil uygulamanız sayesinde her yerden oynayabiliyorum."</p>
+        <p class="text-right mt-2 font-bold text-[var(--primary)]">- Barış A.</p>
+      </div>
+      <div class="bg-[var(--boxbg)] p-4 rounded-lg">
+        <p>"Siteniz tasarım olarak da çok hoşuma gitti. Teşekkürler."</p>
+        <p class="text-right mt-2 font-bold text-[var(--primary)]">- Selin T.</p>
+      </div>
+      <div class="bg-[var(--boxbg)] p-4 rounded-lg">
+        <p>"Hızlı bahis yapmayı seviyorum. Kesinlikle en iyisi!"</p>
+        <p class="text-right mt-2 font-bold text-[var(--primary)]">- Bora D.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 <!-- FAQ Section -->
 <section id="sss" class="py-16 bg-[var(--darkbg)]">
   <div class="container mx-auto px-6">
@@ -57,3 +305,54 @@
     </div>
   </div>
 </section>
+
+
+<!-- Domain 4 Footer with Logo, Larger App Logos & Floating CTA -->
+<footer class="bg-[var(--footerbg)] py-10 px-6 text-white text-center relative">
+
+  <!-- Main Logo -->
+  <div class="mb-6">
+    <a href="https://betpuanuyelik.com">
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/logo.png" alt="BetPuan Logo" class="mx-auto w-36 md:w-48">
+    </a>
+  </div>
+
+  <!-- Footer Heading & SEO Keywords -->
+  <p class="mb-4 text-lg font-semibold">
+    Lisanslı BetPuan - Türkiye’nin <strong>güvenilir bahis sitesi</strong> ve <strong>mobil bahis giriş</strong>
+  </p>
+
+  <!-- App Download Buttons with Larger Logos -->
+  <div class="flex justify-center gap-12 mb-6 flex-wrap">
+    <a href="https://2bpuan.app" target="_blank" rel="nofollow" class="flex flex-col items-center text-white hover:text-yellow-500">
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/android.png" alt="Android Logo" class="w-20 mb-2">
+      Android Uygulaması
+    </a>
+    <a href="https://2bpuan.app" target="_blank" rel="nofollow" class="flex flex-col items-center text-white hover:text-yellow-500">
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/ios.png" alt="iOS Logo" class="w-20 mb-2">
+      iOS Uygulaması
+    </a>
+  </div>
+
+  <!-- Internal Navigation Links -->
+  <div class="flex justify-center flex-wrap gap-4 mb-4 text-sm">
+    <a href="https://betpuan.co" class="hover:text-yellow-500">BetPuan</a>
+    <a href="https://betpuanguncelgiris.com" class="hover:text-yellow-500">BetPuan Güncel Giriş</a>
+    <a href="https://betpuanmobil.com" class="hover:text-yellow-500">BetPuan Mobil</a>
+    <a href="https://betpuanuyelik.com" class="hover:text-yellow-500">BetPuan Üyelik</a>
+    <a href="https://bonusbetpuan.com" class="hover:text-yellow-500">Bonus BetPuan</a>
+    <a href="https://girisbetpuan.com" class="hover:text-yellow-500">Giriş BetPuan</a>
+    <a href="https://puanbetgiris.com" class="hover:text-yellow-500">PuanBet Giriş</a>
+  </div>
+
+  <!-- Copyright -->
+  <p class="text-sm text-gray-300">© 2025 BetPuanUyelik.com Tüm Hakları Saklıdır.</p>
+
+  <!-- Floating CTA Button -->
+  <a href="https://sshortly5.com/9ca3b2b" rel="nofollow" class="fixed bottom-6 right-6 bg-yellow-500 text-black font-bold py-3 px-6 rounded-full shadow-lg hover:bg-yellow-400 animate-bounce-slow z-50">
+    🚀 Hemen Üye Ol
+  </a>
+</footer>
+
+</body>
+</html>
