--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
     });
   </script>
   <style>
+
+    @media (max-width: 768px) {
+  #hero {
+    height: 60vh;
+  }
+}
+
     .animate-fadeInUp {
       opacity: 0;
       transform: translateY(20px);
