--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </nav>
 
   <!-- Hero Section with Parallax -->
-  <section id="hero" class="relative h-[80vh] parallax" style="background-image: url('https://github.com/betseogalaxi/m/blob/main/000010-500-al.jpg?raw=1');">
+  <section id="hero" class="relative h-[80vh] parallax" style="background-image: url('https://github.com/betseogalaxi/m/blob/main/000010-500-al.jpg?raw=1');" >
     <div class="absolute inset-0 bg-black opacity-60"></div>
     <div class="relative container mx-auto h-full flex flex-col justify-center px-6 text-center">
       <h1 class="text-4xl md:text-6xl font-extrabold mb-4 animate-fadeInUp">📲 BetPuan Üyelik ile <span class="text-[var(--primary)]">Kazanmaya Başla!</span></h1>
@@ -337,7 +337,7 @@
   <!-- Main Logo -->
   <div class="mb-6">
     <a href="https://betpuanuyelik.com">
-      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/logo.png" alt="BetPuan Logo" class="mx-auto w-36 md:w-48">
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/logo.png" rel="nofollow" alt="BetPuan Logo" class="mx-auto w-36 md:w-48">
     </a>
   </div>
 
@@ -349,18 +349,18 @@
   <!-- App Download Buttons with Larger Logos -->
   <div class="flex justify-center gap-12 mb-6 flex-wrap">
     <a href="https://2bpuan.app" target="_blank" rel="nofollow" class="flex flex-col items-center text-white hover:text-yellow-500">
-      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/android.png" alt="Android Logo" class="w-20 mb-2">
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/android.png" rel="nofollow" alt="Android Logo" class="w-20 mb-2">
       Android Uygulaması
     </a>
     <a href="https://2bpuan.app" target="_blank" rel="nofollow" class="flex flex-col items-center text-white hover:text-yellow-500">
-      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/ios.png" alt="iOS Logo" class="w-20 mb-2">
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/ios.png" rel="nofollow" alt="iOS Logo" class="w-20 mb-2">
       iOS Uygulaması
     </a>
   </div>
 
   <!-- Internal Navigation Links -->
   <div class="flex justify-center flex-wrap gap-4 mb-4 text-sm">
-    <a href="https://betpuan.co" class="hover:text-yellow-500">BetPuan</a>
+    <a href="https://betpuan.co" class="hover:text-yellow-500">BetPuan Bahis Sitesi</a>
     <a href="https://betpuanguncelgiris.com" class="hover:text-yellow-500">BetPuan Güncel Giriş</a>
     <a href="https://betpuanmobil.com" class="hover:text-yellow-500">BetPuan Mobil</a>
     <a href="https://betpuanuyelik.com" class="hover:text-yellow-500">BetPuan Üyelik</a>
