--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     content="BetPuan Üyelik ile güvenilir bahis siteleri arasında yer alın. Hızlı mobil giriş, deneme bonusu avantajları, lisanslı bahis sitesi deneyimi sizi bekliyor!" />
   <meta name="keywords"
     content="bahis siteleri, nakit bahis, mobil bahis giriş, güvenilir bahis siteleri, deneme bonusu veren bahis siteleri, lisanslı bahis siteleri, bahis casino" />
-  <title>📝 BetPuan — Üyelik Avantajları & Deneme Bonusu Bahis Sitesi</title>
+  <title>🟢🏅 BetPuan 🎁💰 Üyelik Avantajları & Deneme Bonusu Bahis Sitesi</title>
+  <meta name="author" content="BetPuan" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     :root {
