--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="BetPuan Üyelik ile güvenilir bahis siteleri arasında yer alın. Hızlı mobil giriş, deneme bonusu avantajları, lisanslı bahis sitesi deneyimi sizi bekliyor!" />
-  <meta name="keywords"
-    content="bahis siteleri, nakit bahis, mobil bahis giriş, güvenilir bahis siteleri, deneme bonusu veren bahis siteleri, lisanslı bahis siteleri, bahis casino" />
+  
+  <meta name="description" content="BetPuanYyelik.com ile güvenilir bahis siteleri arasında yer alın. Hızlı mobil giriş, deneme bonusu avantajları, lisanslı bahis sitesi deneyimi sizi bekliyor!" />
+  <meta name="keywords" content="bahis siteleri, nakit bahis, mobil bahis giriş, güvenilir bahis siteleri, deneme bonusu veren bahis siteleri, lisanslı bahis siteleri, bahis casino" />
   <title>🟢🏅 BetPuan 🎁💰 Üyelik Avantajları & Deneme Bonusu Bahis Sitesi</title>
   <meta name="author" content="BetPuan" />
+  <link rel="canonical" href="https://betpuanuyelik.com" />
+  
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     :root {
@@ -51,6 +52,40 @@
     }
   }
 </style>
+
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "BetPuan",
+  "url": "https://betpuanuyelik.com",
+  "logo": "https://raw.githubusercontent.com/betseogalaxi/m/main/betpuan-logo.png",
+  "sameAs": [
+    "https://betpuan.co",
+    "https://betpuanmobil.com",
+    "https://girisbetpuan.com",
+    "https://puanbetgiris.com"
+  ],
+  "description": "BetPuanUyelik.com ile güvenilir bahis siteleri arasında yer alın. Hızlı mobil giriş, deneme bonusu avantajları, lisanslı bahis sitesi deneyimi sizi bekliyor.",
+  "founder": {
+    "@type": "Person",
+    "name": "BetPuan Team"
+  },
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "contactType": "customer support",
+    "email": "support@betpuan.co",
+    "availableLanguage": ["Turkish", "English"]
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "bestRating": "5",
+    "ratingCount": "45638"
+  }
+}
+</script>
+  
 </head>
 
 <body class="bg-[var(--darkbg)] text-white font-sans antialiased">
