--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <meta name="description" content="BetPuanYyelik.com ile güvenilir bahis siteleri arasında yer alın. Hızlı mobil giriş, deneme bonusu avantajları, lisanslı bahis sitesi deneyimi sizi bekliyor!" />
+  <meta name="description" content="BetPuanUyelik.com ile güvenilir bahis siteleri arasında yer alın. Hızlı mobil giriş, deneme bonusu avantajları, lisanslı bahis sitesi deneyimi sizi bekliyor!" />
   <meta name="keywords" content="bahis siteleri, nakit bahis, mobil bahis giriş, güvenilir bahis siteleri, deneme bonusu veren bahis siteleri, lisanslı bahis siteleri, bahis casino" />
   <title>🟢🏅 BetPuan 🎁💰 Üyelik Avantajları & Deneme Bonusu Bahis Sitesi</title>
   <meta name="author" content="BetPuan" />
