--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   "contactPoint": {
     "@type": "ContactPoint",
     "contactType": "customer support",
-    "email": "support@betpuan.co",
+    "email": "support@betpuanuyelik.com",
     "availableLanguage": ["Turkish", "English"]
   },
   "aggregateRating": {
