--- a/index.html
+++ b/index.html
@@ -85,6 +85,95 @@
   }
 }
 </script>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Nasıl üye olabilirim?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Ana sayfadaki 'Üye Ol' butonuna tıklayarak hızlıca kayıt olabilirsiniz."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Çekim işlemleri ne kadar sürer?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "MEFETE veya Kripto ile yapılan çekimler 5 dakikadan kısa sürer."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Deneme bonusu veriyor musunuz?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Evet! Yeni üyeler için deneme bonusu mevcuttur."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Mobil uygulama var mı?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Android ve iOS uygulamamız bulunmaktadır."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Hesabım güvende mi?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Güvenlik protokollerimiz ve şifreleme yöntemlerimiz uluslararası standartlara uygundur."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Bonus çevrim şartları nelerdir?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Bonuslar, belirli çevirim şartlarına tabidir. Detaylara promosyon sayfasından ulaşabilirsiniz."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Canlı bahis yapabilir miyim?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Evet, canlı bahis seçeneklerimiz geniş bir yelpazede sunulmaktadır."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Canlı destek hizmeti var mı?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "7/24 canlı destek ekibimiz hizmetinizdedir."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Hesabımı doğrulamam gerekiyor mu?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Çekim işlemleri için hesap doğrulaması gerekebilir."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Hangi para birimlerini kullanabilirim?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "TRY başta olmak üzere birçok para birimini destekliyoruz."
+      }
+    }
+  ]
+}
+</script>
   
 </head>
 
@@ -365,7 +454,6 @@
     </div>
   </div>
 </section>
-
 
 <!-- Domain 4 Footer with Logo, Larger App Logos & Floating CTA -->
 <footer class="bg-[var(--footerbg)] py-10 px-6 text-white text-center relative">
