--- a/index.html
+++ b/index.html
@@ -455,6 +455,31 @@
   </div>
 </section>
 
+<!-- SEO Text Block -->
+<section class="bg-[#3E4967] py-10 px-6 text-center text-sm text-gray-300">
+  <h3 class="text-3xl font-bold mb-4 text-gray-100">🎯 Neden BetPuan?</h3>
+  
+  <p class="leading-relaxed max-w-4xl mx-auto">
+    BetPuan, <strong class="text-gray-100">lisanslı bahis siteleri</strong> arasında güvenilirliği ve hızlı ödeme altyapısı ile öne çıkan platformlardan biridir. 
+    🎁 %100 hoş geldin bonusu 🆓, <strong class="text-gray-100">deneme bonusu veren bahis siteleri</strong> arasında liderliği ile fark yaratır. 
+    Canlı casino, slot, poker, ⚽ canlı spor bahisleri gibi oyunlara <strong class="text-gray-100">mobil bahis giriş</strong> ile istediğin her yerden erişebilirsin. 
+    💸 <strong class="text-gray-100">nakit bahis giriş</strong> avantajı, 7/24 müşteri desteği ve güvenilir altyapısı ile BetPuan her zaman kazandırır.
+  </p>
+
+  <p class="font-semibold mt-6 text-gray-100">
+    🔗 Ayrıca resmi BetPuan erişim adresleri:
+  </p>
+
+  <p class="mt-1">
+    <a href="https://betpuan.co" class="underline hover:text-yellow-300 transition">betpuan.co</a> •
+    <a href="https://betpuanmobil.com" class="underline hover:text-yellow-300 transition">betpuanmobil.com</a> •
+    <a href="https://betpuanuyelik.com" class="underline hover:text-yellow-300 transition">betpuanuyelik.com</a> •
+    <a href="https://girisbetpuan.com" class="underline hover:text-yellow-300 transition">girisbetpuan.com</a> •
+    <a href="https://puanbetgiris.com" class="underline hover:text-yellow-300 transition">puanbetgiris.com</a> ✅
+  </p>
+</section>
+
+
 <!-- Domain 4 Footer with Logo, Larger App Logos & Floating CTA -->
 <footer class="bg-[var(--footerbg)] py-10 px-6 text-white text-center relative">
 
