--- a/index.html
+++ b/index.html
@@ -513,6 +513,7 @@
     <a href="https://betpuanmobil.com" class="hover:text-yellow-500">BetPuan Mobil Bahis</a>
     <a href="https://betpuanuyelik.com" class="hover:text-yellow-500">BetPuan Üye Giriş</a>
     <a href="https://girisbetpuan.com" class="hover:text-yellow-500">Online Giriş BetPuan</a>
+    <a href="https://betpuan.bet" class="hover:text-yellow-500">Betpuan Üye Giriş</a>
     <a href="https://puanbetgiris.com" class="hover:text-yellow-500">PuanBet Bahis Giriş</a>
   </div>
 
