--- a/index.html
+++ b/index.html
@@ -471,6 +471,7 @@
   </p>
 
   <p class="mt-1">
+    <a href="https://betpuan.bet" class="underline hover:text-yellow-300 transition">betpuan.bet</a> •
     <a href="https://betpuan.co" class="underline hover:text-yellow-300 transition">betpuan.co</a> •
     <a href="https://betpuanmobil.com" class="underline hover:text-yellow-300 transition">betpuanmobil.com</a> •
     <a href="https://betpuanuyelik.com" class="underline hover:text-yellow-300 transition">betpuanuyelik.com</a> •
