--- a/index.html
+++ b/index.html
@@ -519,7 +519,8 @@
   </div>
 
   <!-- Copyright -->
-  <p class="text-sm text-gray-300">© 2025 BetPuanUyelik.com Tüm Hakları Saklıdır.</p>
+  <p class="text-sm text-gray-300">© 2025 BetPuanUyelik.com - Tüm Hakları Saklıdır - <a href="https://cmsbetconstruct.com/storage/medias/betpuan/media_1867725_2b9f44f520d059adf89e75148595311c.png" class="underline hover:text-yellow-300 transition" target="_blank" rel="nofollow noopener noreferrer">
+  Site Lisansı</a></p></p>
 
   <!-- Floating CTA Button -->
   <a href="https://sshortly5.com/9ca3b2b" rel="nofollow" class="fixed bottom-6 right-6 bg-yellow-500 text-black font-bold py-3 px-6 rounded-full shadow-lg hover:bg-yellow-400 animate-bounce-slow z-50">
