--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
   
   <p class="leading-relaxed max-w-4xl mx-auto">
     BetPuan, <strong class="text-gray-100">lisanslı bahis siteleri</strong> arasında güvenilirliği ve hızlı ödeme altyapısı ile öne çıkan platformlardan biridir. 
-    🎁 %100 hoş geldin bonusu 🆓, <strong class="text-gray-100">deneme bonusu veren bahis siteleri</strong> arasında liderliği ile fark yaratır. 
+    🎁 Hoş geldin bonusu 🆓, <strong class="text-gray-100">deneme bonusu veren bahis siteleri</strong> arasında liderliği ile fark yaratır. 
     Canlı casino, slot, poker, ⚽ canlı spor bahisleri gibi oyunlara <strong class="text-gray-100">mobil bahis giriş</strong> ile istediğin her yerden erişebilirsin. 
     💸 <strong class="text-gray-100">nakit bahis giriş</strong> avantajı, 7/24 müşteri desteği ve güvenilir altyapısı ile BetPuan her zaman kazandırır.
   </p>
