--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     "https://betpuan.co",
     "https://betpuanmobil.com",
     "https://girisbetpuan.com",
+    "https://betpuan.bet",  
     "https://puanbetgiris.com"
   ],
   "description": "BetPuanUyelik.com ile güvenilir bahis siteleri arasında yer alın. Hızlı mobil giriş, deneme bonusu avantajları, lisanslı bahis sitesi deneyimi sizi bekliyor.",
@@ -82,6 +83,39 @@
     "ratingValue": "5",
     "bestRating": "5",
     "ratingCount": "45638"
+  }
+}
+</script>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoObject",
+  "name": "Lisanslı Betpuan Canlı Oyunlar, Slot, Rulet, Bonusları",
+  "description": "BetPuan platformunu keşfedin! Canlı bahis, mobil casino ve bonus fırsatlarını videomuzda izleyin.",
+  "thumbnailUrl": [
+    "https://img.youtube.com/vi/TpIVQcVV9qw/maxresdefault.jpg"
+  ],
+  "uploadDate": "2025-11-05",
+  "duration": "PT2M25S", 
+  "contentUrl": "https://www.youtube.com/watch?v=TpIVQcVV9qw",
+  "embedUrl": "https://www.youtube-nocookie.com/embed/TpIVQcVV9qw",
+  "publisher": {
+    "@type": "Organization",
+    "name": "BetPuan",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://raw.githubusercontent.com/betseogalaxi/m/main/betpuan-logo.png",
+      "width": 600,
+      "height": 60
+    }
+  },
+  "interactionStatistic": {
+    "@type": "InteractionCounter",
+    "interactionType": {
+      "@type": "WatchAction"
+    },
+    "userInteractionCount": 2534
   }
 }
 </script>
@@ -209,6 +243,26 @@
       <a href="#odeme" class="bg-[var(--primary)] px-8 py-3 text-[var(--darkbg)] font-bold rounded-lg hover:scale-105 transition animate-fadeInUp delay-300">Hemen Üye Ol</a>
     </div>
   </section>
+
+  <!-- Video Section -->
+<section class="py-12 bg-[#3E4967] text-center">
+  <div class="max-w-5xl mx-auto px-6">
+    <h2 class="text-2xl font-bold mb-6 text-white">📹 Lisanslı Betpuan Canlı Oyunlar, Slot, Rulet, Bonusları</h2>
+    <p class="text-lg mb-6 text-white">BetPuan platformunu keşfedin! Canlı bahis, mobil casino ve bonus fırsatlarını videomuzda izleyin.</p>
+
+    <div class="relative overflow-hidden rounded-lg shadow-lg reveal reveal-delay-2" style="padding-top: 56.25%;">
+      <iframe
+        class="absolute top-0 left-0 w-full h-full rounded-lg"
+        src="https://www.youtube-nocookie.com/embed/TpIVQcVV9qw?origin=https://betpuanuyelik.com&rel=0&modestbranding=1&loop=1&playlist=TpIVQcVV9qw"
+        title="Lisanslı Betpuan Canlı Oyunlar, Slot, Rulet, Bonusları"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen>
+      </iframe>
+    </div>
+  </div>
+</section>
 
 <!-- Popular Games Section with Horizontal Scroller -->
 <section id="oyunlar" class="py-16 bg-[var(--darkbg-alt)]">
@@ -520,7 +574,7 @@
 
   <!-- Copyright -->
   <p class="text-sm text-gray-300">© 2025 BetPuanUyelik.com - Tüm Hakları Saklıdır - <a href="https://cmsbetconstruct.com/storage/medias/betpuan/media_1867725_2b9f44f520d059adf89e75148595311c.png" class="underline hover:text-yellow-300 transition" target="_blank" rel="nofollow noopener noreferrer">
-  Site Lisansı</a></p></p>
+  PetPuan Resmi Lisans</a></p>
 
   <!-- Floating CTA Button -->
   <a href="https://sshortly5.com/9ca3b2b" rel="nofollow" class="fixed bottom-6 right-6 bg-yellow-500 text-black font-bold py-3 px-6 rounded-full shadow-lg hover:bg-yellow-400 animate-bounce-slow z-50">
