--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
   <!-- Video Section -->
 <section class="py-12 bg-[#3E4967] text-center">
   <div class="max-w-5xl mx-auto px-6">
-    <h2 class="text-2xl font-bold mb-6 text-white">📹 Lisanslı Betpuan Canlı Oyunlar, Slot, Rulet, Bonusları</h2>
+    <h2 class="text-3xl font-bold mb-8 flex items-center">📹 Lisanslı Betpuan Canlı Oyunlar, Slot, Rulet, Bonusları</h2>
     <p class="text-lg mb-6 text-white">BetPuan platformunu keşfedin! Canlı bahis, mobil casino ve bonus fırsatlarını videomuzda izleyin.</p>
 
     <div class="relative overflow-hidden rounded-lg shadow-lg reveal reveal-delay-2" style="padding-top: 56.25%;">
