--- a/index.html
+++ b/index.html
@@ -269,43 +269,90 @@
   <div class="container mx-auto px-6">
     <h2 class="text-3xl font-bold mb-8 flex items-center"><span class="mr-2">🎮</span> Popüler Oyunlar</h2>
     <div class="flex overflow-x-scroll space-x-4 no-scrollbar pb-4">
-      <img src="https://github.com/betseogalaxi/m/blob/main/000012-tekbik.jpg?raw=1" alt="Tek Biçim"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      <img src="https://github.com/betseogalaxi/m/blob/main/000013-ios.jpg?raw=1" alt="iOS Uygulaması"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      <img src="https://github.com/betseogalaxi/m/blob/main/000014-free-spin.jpg?raw=1" alt="Free Spin"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      <img src="https://github.com/betseogalaxi/m/blob/main/000015-flamming-hot-oyun.jpg?raw=1" alt="Flaming Hot"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      <img src="https://github.com/betseogalaxi/m/blob/main/000016-kayip-iade-10.jpg?raw=1" alt="Kayıp iade %10"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      <img src="https://github.com/betseogalaxi/m/blob/main/000017x10bin.jpg?raw=1" alt="X10.000 Kazan"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      <img src="https://github.com/betseogalaxi/m/blob/main/000018-ios.jpg?raw=1" alt="iOS App Download"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      <img src="https://github.com/betseogalaxi/m/blob/main/000022-cat-games.jpg?raw=1" alt="Cat Games"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      <img src="https://github.com/betseogalaxi/m/blob/main/00003-cekim-limit-5mil.jpg?raw=1" alt="Çekim limiti 5M"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      <img src="https://github.com/betseogalaxi/m/blob/main/000023-game-ad.jpg?raw=1" alt="Popüler Game Ad"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      <img src="https://github.com/betseogalaxi/m/blob/main/000024-king.jpg?raw=1" alt="King Slot"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      <img src="https://github.com/betseogalaxi/m/blob/main/000025-fake-site-alert.jpg?raw=1" alt="Fake Site Alert"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      <img src="https://github.com/betseogalaxi/m/blob/main/000026-tebrik.jpg?raw=1" alt="Tebrik Kazandın"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      <img src="https://github.com/betseogalaxi/m/blob/main/000027-nice.jpg?raw=1" alt="Nice Kazanç"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      <img src="https://github.com/betseogalaxi/m/blob/main/000028-vip-siber.jpg?raw=1" alt="VIP Siber Güvenlik"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
-      <img src="https://github.com/betseogalaxi/m/blob/main/000029-casino-bonus.jpg?raw=1" alt="Casino Bonus"
-        class="w-64 h-40 rounded-lg object-cover cursor-pointer hover:scale-105 transition" rel="nofollow" />
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/000012-tekbik.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/000012-tekbik.jpg?raw=1" alt="Tek Biçim"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/000013-ios.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/000013-ios.jpg?raw=1" alt="iOS Uygulaması"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/000014-free-spin.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/000014-free-spin.jpg?raw=1" alt="Free Spin"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/000015-flamming-hot-oyun.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/000015-flamming-hot-oyun.jpg?raw=1" alt="Flaming Hot"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/000016-kayip-iade-10.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/000016-kayip-iade-10.jpg?raw=1" alt="Kayıp iade %10"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/000017x10bin.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/000017x10bin.jpg?raw=1" alt="X10.000 Kazan"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/000018-ios.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/000018-ios.jpg?raw=1" alt="iOS App Download"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/000022-cat-games.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/000022-cat-games.jpg?raw=1" alt="Cat Games"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/00003-cekim-limit-5mil.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/00003-cekim-limit-5mil.jpg?raw=1" alt="Çekim limiti 5M"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/000023-game-ad.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/000023-game-ad.jpg?raw=1" alt="Popüler Game Ad"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/000024-king.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/000024-king.jpg?raw=1" alt="King Slot"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/000025-fake-site-alert.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/000025-fake-site-alert.jpg?raw=1" alt="Fake Site Alert"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/000026-tebrik.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/000026-tebrik.jpg?raw=1" alt="Tebrik Kazandın"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/000027-nice.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/000027-nice.jpg?raw=1" alt="Nice Kazanç"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/000028-vip-siber.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/000028-vip-siber.jpg?raw=1" alt="VIP Siber Güvenlik"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
+
+      <a href="https://github.com/betseogalaxi/m/blob/main/000029-casino-bonus.jpg?raw=1" rel="nofollow" target="_blank">
+        <img src="https://github.com/betseogalaxi/m/blob/main/000029-casino-bonus.jpg?raw=1" alt="Casino Bonus"
+          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
+      </a>
 
     </div>
   </div>
 </section>
-
 
   <!-- Bonuses & Campaigns (placeholder for next part) -->
   <!-- ... -->
