--- a/index.html
+++ b/index.html
@@ -264,98 +264,24 @@
   </div>
 </section>
 
-<!-- Popular Games Section with Horizontal Scroller -->
-<section id="oyunlar" class="py-16 bg-[var(--darkbg-alt)]">
-  <div class="container mx-auto px-6">
-    <h2 class="text-3xl font-bold mb-8 flex items-center"><span class="mr-2">🎮</span> Popüler Oyunlar</h2>
-    <div class="flex overflow-x-scroll space-x-4 no-scrollbar pb-4">
+<!-- Responsive Non-Clickable Image Gallery -->
+<section class="py-12 bg-[#3E4967]">
+  <div class="max-w-5xl mx-auto px-4">
+    <h2 class="text-2xl font-bold mb-6 text-white text-center">🎮 Popüler Oyunlar</h2>
 
-      <a href="https://github.com/betseogalaxi/m/blob/main/000012-tekbik.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/000012-tekbik.jpg?raw=1" alt="Tek Biçim"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
-      <a href="https://github.com/betseogalaxi/m/blob/main/000013-ios.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/000013-ios.jpg?raw=1" alt="iOS Uygulaması"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
-      <a href="https://github.com/betseogalaxi/m/blob/main/000014-free-spin.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/000014-free-spin.jpg?raw=1" alt="Free Spin"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
-      <a href="https://github.com/betseogalaxi/m/blob/main/000015-flamming-hot-oyun.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/000015-flamming-hot-oyun.jpg?raw=1" alt="Flaming Hot"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
-      <a href="https://github.com/betseogalaxi/m/blob/main/000016-kayip-iade-10.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/000016-kayip-iade-10.jpg?raw=1" alt="Kayıp iade %10"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
-      <a href="https://github.com/betseogalaxi/m/blob/main/000017x10bin.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/000017x10bin.jpg?raw=1" alt="X10.000 Kazan"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
-      <a href="https://github.com/betseogalaxi/m/blob/main/000018-ios.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/000018-ios.jpg?raw=1" alt="iOS App Download"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
-      <a href="https://github.com/betseogalaxi/m/blob/main/000022-cat-games.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/000022-cat-games.jpg?raw=1" alt="Cat Games"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
-      <a href="https://github.com/betseogalaxi/m/blob/main/00003-cekim-limit-5mil.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/00003-cekim-limit-5mil.jpg?raw=1" alt="Çekim limiti 5M"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
-      <a href="https://github.com/betseogalaxi/m/blob/main/000023-game-ad.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/000023-game-ad.jpg?raw=1" alt="Popüler Game Ad"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
-      <a href="https://github.com/betseogalaxi/m/blob/main/000024-king.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/000024-king.jpg?raw=1" alt="King Slot"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
-      <a href="https://github.com/betseogalaxi/m/blob/main/000025-fake-site-alert.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/000025-fake-site-alert.jpg?raw=1" alt="Fake Site Alert"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
-      <a href="https://github.com/betseogalaxi/m/blob/main/000026-tebrik.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/000026-tebrik.jpg?raw=1" alt="Tebrik Kazandın"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
-      <a href="https://github.com/betseogalaxi/m/blob/main/000027-nice.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/000027-nice.jpg?raw=1" alt="Nice Kazanç"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
-      <a href="https://github.com/betseogalaxi/m/blob/main/000028-vip-siber.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/000028-vip-siber.jpg?raw=1" alt="VIP Siber Güvenlik"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
-      <a href="https://github.com/betseogalaxi/m/blob/main/000029-casino-bonus.jpg?raw=1" rel="nofollow" target="_blank">
-        <img src="https://github.com/betseogalaxi/m/blob/main/000029-casino-bonus.jpg?raw=1" alt="Casino Bonus"
-          class="w-128 h-80 rounded-lg object-cover cursor-pointer hover:scale-105 transition" />
-      </a>
-
+    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
+      <!-- Image 1 -->
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000024-king.jpg" alt="King Oyun Ekranı" class="w-full h-auto rounded-lg shadow-lg">
+      <!-- Image 2 -->
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000026-tebrik.jpg" alt="Tebrik Bonus Ekranı" class="w-full h-auto rounded-lg shadow-lg">
+      <!-- Image 3 -->
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000027-aviator.jpg" alt="Aviator Oyun Ekranı" class="w-full h-auto rounded-lg shadow-lg">
+      <!-- Image 4 -->
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000036-olympus.jpg" alt="Olympus Slot Ekranı" class="w-full h-auto rounded-lg shadow-lg">
     </div>
   </div>
 </section>
 
-  <!-- Bonuses & Campaigns (placeholder for next part) -->
-  <!-- ... -->
 
   <script>
     // Animation for fade-in
