--- a/index.html
+++ b/index.html
@@ -264,24 +264,32 @@
   </div>
 </section>
 
-<!-- Responsive Non-Clickable Image Gallery -->
-<section class="py-12 bg-[#3E4967]">
-  <div class="max-w-5xl mx-auto px-4">
-    <h2 class="text-2xl font-bold mb-6 text-white text-center">🎮 Popüler Oyunlar</h2>
+<!-- Responsive 12-Image Gallery with Reveal Animation -->
+<section id="populer-oyunlar" class="py-16 bg-[var(--darkbg-alt)]">
+  <div class="max-w-6xl mx-auto px-6">
+    <h2 class="text-3xl font-bold mb-10 flex items-center reveal"><span class="mr-2">🎮</span> Popüler Oyunlar</h2>
 
     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
-      <!-- Image 1 -->
-      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000024-king.jpg" alt="King Oyun Ekranı" class="w-full h-auto rounded-lg shadow-lg">
-      <!-- Image 2 -->
-      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000026-tebrik.jpg" alt="Tebrik Bonus Ekranı" class="w-full h-auto rounded-lg shadow-lg">
-      <!-- Image 3 -->
-      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000027-aviator.jpg" alt="Aviator Oyun Ekranı" class="w-full h-auto rounded-lg shadow-lg">
-      <!-- Image 4 -->
-      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000036-olympus.jpg" alt="Olympus Slot Ekranı" class="w-full h-auto rounded-lg shadow-lg">
+      <!-- Row 1 -->
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000012-tekbik.jpg" alt="Tek Biçim" class="w-full h-auto rounded-lg shadow-lg object-cover reveal reveal-delay-1" rel="nofollow" />
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000013-ios.jpg" alt="iOS Uygulaması" class="w-full h-auto rounded-lg shadow-lg object-cover reveal reveal-delay-2" rel="nofollow" />
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000014-free-spin.jpg" alt="Free Spin" class="w-full h-auto rounded-lg shadow-lg object-cover reveal reveal-delay-3" rel="nofollow" />
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000015-flamming-hot-oyun.jpg" alt="Flaming Hot" class="w-full h-auto rounded-lg shadow-lg object-cover reveal reveal-delay-4" rel="nofollow" />
+
+      <!-- Row 2 -->
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000016-kayip-iade-10.jpg" alt="Kayıp iade %10" class="w-full h-auto rounded-lg shadow-lg object-cover reveal reveal-delay-1" rel="nofollow" />
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000017x10bin.jpg" alt="X10.000 Kazan" class="w-full h-auto rounded-lg shadow-lg object-cover reveal reveal-delay-2" rel="nofollow" />
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000018-ios.jpg" alt="iOS App Download" class="w-full h-auto rounded-lg shadow-lg object-cover reveal reveal-delay-3" rel="nofollow" />
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000022-cat-games.jpg" alt="Cat Games" class="w-full h-auto rounded-lg shadow-lg object-cover reveal reveal-delay-4" rel="nofollow" />
+
+      <!-- Row 3 -->
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/00003-cekim-limit-5mil.jpg" alt="Çekim limiti 5M" class="w-full h-auto rounded-lg shadow-lg object-cover reveal reveal-delay-1" rel="nofollow" />
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000023-game-ad.jpg" alt="Popüler Game Ad" class="w-full h-auto rounded-lg shadow-lg object-cover reveal reveal-delay-2" rel="nofollow" />
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000024-king.jpg" alt="King Slot" class="w-full h-auto rounded-lg shadow-lg object-cover reveal reveal-delay-3" rel="nofollow" />
+      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/000026-tebrik.jpg" alt="Tebrik Kazandın" class="w-full h-auto rounded-lg shadow-lg object-cover reveal reveal-delay-4" rel="nofollow" />
     </div>
   </div>
 </section>
-
 
   <script>
     // Animation for fade-in
@@ -547,7 +555,7 @@
 
   <!-- Copyright -->
   <p class="text-sm text-gray-300">© 2025 BetPuanUyelik.com - Tüm Hakları Saklıdır - <a href="https://cmsbetconstruct.com/storage/medias/betpuan/media_1867725_2b9f44f520d059adf89e75148595311c.png" class="underline hover:text-yellow-300 transition" target="_blank" rel="nofollow noopener noreferrer">
-  PetPuan Resmi Lisans</a></p>
+  BetPuan Resmi Lisans</a></p>
 
   <!-- Floating CTA Button -->
   <a href="https://sshortly5.com/9ca3b2b" rel="nofollow" class="fixed bottom-6 right-6 bg-yellow-500 text-black font-bold py-3 px-6 rounded-full shadow-lg hover:bg-yellow-400 animate-bounce-slow z-50">
