--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 </section>
 
 <!-- SEO Text Block -->
-<section class="bg-[#3E4967] py-10 px-6 text-center text-sm text-gray-300">
+<section class="bg-[#3E4967] py-10 px-6 text-center text-base text-gray-300">
   <h3 class="text-3xl font-bold mb-4 text-gray-100">🎯 Neden BetPuan?</h3>
   
   <p class="leading-relaxed max-w-4xl mx-auto">
@@ -514,7 +514,6 @@
     <a href="https://puanbetgiris.com" class="underline hover:text-yellow-300 transition">puanbetgiris.com</a> ✅
   </p>
 </section>
-
 
 <!-- Domain 4 Footer with Logo, Larger App Logos & Floating CTA -->
 <footer class="bg-[var(--footerbg)] py-10 px-6 text-white text-center relative">
