--- a/index.html
+++ b/index.html
@@ -832,19 +832,23 @@
     </a>
   </div>
 
-  <!-- Internal Navigation Links -->
-  <div class="flex justify-center flex-wrap gap-4 mb-4 text-sm">
-    <a href="https://betpuan.co" class="hover:text-yellow-500">BetPuan Bahis Sitesi</a>
-    <a href="https://betpuanmobil.com" class="hover:text-yellow-500">BetPuan Mobil Bahis</a>
-    <a href="https://betpuanuyelik.com" class="hover:text-yellow-500">BetPuan Üye Giriş</a>
-    <a href="https://girisbetpuan.com" class="hover:text-yellow-500">Online Giriş BetPuan</a>
-    <a href="https://betpuan.bet" class="hover:text-yellow-500">Betpuan Üye Giriş</a>
-    <a href="https://puanbetgiris.com" class="hover:text-yellow-500">PuanBet Bahis Giriş</a>
-  </div>
+<!-- Internal Navigation Links -->
+<div class="flex justify-center flex-wrap gap-4 mb-4 text-base">
+  <a href="https://betpuan.co" class="hover:text-yellow-500">BetPuan Bahis Sitesi</a>
+  <a href="https://betpuanmobil.com" class="hover:text-yellow-500">BetPuan Mobil Bahis</a>
+  <a href="https://betpuanuyelik.com" class="hover:text-yellow-500">BetPuan Üye Giriş</a>
+  <a href="https://girisbetpuan.com" class="hover:text-yellow-500">Online Giriş BetPuan</a>
+  <a href="https://betpuan.bet" class="hover:text-yellow-500">Betpuan Üye Giriş</a>
+  <a href="https://puanbetgiris.com" class="hover:text-yellow-500">PuanBet Bahis Giriş</a>
+</div>
 
-  <!-- Copyright -->
-  <p class="text-sm text-gray-300">© 2025 BetPuanUyelik.com - Tüm Hakları Saklıdır - <a href="https://cmsbetconstruct.com/storage/medias/betpuan/media_1867725_2b9f44f520d059adf89e75148595311c.png" class="underline hover:text-yellow-300 transition" target="_blank" rel="nofollow noopener noreferrer">
-  BetPuan Resmi Lisans</a></p>
+<!-- Copyright -->
+<p class="text-base text-gray-300">
+  © 2025 BetPuanUyelik.com - Tüm Hakları Saklıdır - 
+  <a href="https://cmsbetconstruct.com/storage/medias/betpuan/media_1867725_2b9f44f520d059adf89e75148595311c.png" class="underline hover:text-yellow-300 transition" target="_blank" rel="nofollow noopener noreferrer">
+    BetPuan Resmi Lisans
+  </a>
+</p>
 
   <!-- Floating CTA Button -->
   <a href="https://sshortly5.com/9ca3b2b" rel="nofollow" class="fixed bottom-6 right-6 bg-yellow-500 text-black font-bold py-3 px-6 rounded-full shadow-lg hover:bg-yellow-400 animate-bounce-slow z-50">
