--- a/index.html
+++ b/index.html
@@ -844,10 +844,7 @@
 
 <!-- Copyright -->
 <p class="text-base text-gray-300">
-  © 2025 BetPuanUyelik.com - Tüm Hakları Saklıdır - 
-  <a href="https://cmsbetconstruct.com/storage/medias/betpuan/media_1867725_2b9f44f520d059adf89e75148595311c.png" class="underline hover:text-yellow-300 transition" target="_blank" rel="nofollow noopener noreferrer">
-    BetPuan Resmi Lisans
-  </a>
+  © 2025 <strong>BetPuan</strong> - Tüm Hakları Saklıdır - BetPuan ® is an official registered trademark.
 </p>
 
   <!-- Floating CTA Button -->
