--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
 
 <!-- Internal Navigation Links -->
 <div class="flex justify-center flex-wrap gap-4 mb-4 text-base">
-  <a href="https://betpuan.co" class="hover:text-yellow-500">BetPuan Bahis Sitesi</a>
+  <a href="http://domain.vsw.jp/betpuanuyelik.com" class="hover:text-yellow-500">BetPuan Bahis Sitesi</a>
   <a href="https://betpuanmobil.com" class="hover:text-yellow-500">BetPuan Mobil Bahis</a>
   <a href="https://betpuanuyelik.com" class="hover:text-yellow-500">BetPuan Üye Giriş</a>
   <a href="https://girisbetpuan.com" class="hover:text-yellow-500">Online Giriş BetPuan</a>
