--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
   <a href="http://domain.vsw.jp/betpuanuyelik.com" class="hover:text-yellow-500">BetPuan Bahis Sitesi</a>
   <a href="https://betpuanmobil.com" class="hover:text-yellow-500">BetPuan Mobil Bahis</a>
   <a href="https://betpuanuyelik.com" class="hover:text-yellow-500">BetPuan Üye Giriş</a>
-  <a href="http://domain.vsw.jp/betpuanmobil.com" class="hover:text-yellow-500">Online Giriş BetPuan</a>
+  <a href="http://domain.vsw.jp/bonusbetpuan.com" class="hover:text-yellow-500">Online Giriş BetPuan</a>
   <a href="https://betpuan.bet" class="hover:text-yellow-500">Betpuan Üye Giriş</a>
   <a href="https://puanbetgiris.com" class="hover:text-yellow-500">PuanBet Bahis Giriş</a>
 </div>
